@@ -1,11 +1,11 @@
 README:  Tk
-    This is the Tk 8.5.6 source distribution.
+    This is the Tk 8.5.7 source distribution.
     Tcl/Tk is also available through NetCVS:
 	http://tcl.sourceforge.net/
     You can get any source release of Tcl from the file distributions
     link at the above URL.
 
-RCS: @(#) $Id: README,v 1.53.2.5 2008/12/21 21:02:58 dgp Exp $
+RCS: @(#) $Id: README,v 1.53.2.6 2009/04/10 18:13:05 dgp Exp $
 
 1. Introduction
 ---------------
