@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tk.h,v 1.109.2.10 2008/12/21 21:02:58 dgp Exp $
+ * RCS: @(#) $Id: tk.h,v 1.109.2.11 2009/04/10 18:13:05 dgp Exp $
  */
 
 #ifndef _TK
@@ -53,10 +53,10 @@ extern "C" {
 #define TK_MAJOR_VERSION	8
 #define TK_MINOR_VERSION	5
 #define TK_RELEASE_LEVEL	TCL_FINAL_RELEASE
-#define TK_RELEASE_SERIAL	6
+#define TK_RELEASE_SERIAL	7
 
 #define TK_VERSION		"8.5"
-#define TK_PATCH_LEVEL		"8.5.6"
+#define TK_PATCH_LEVEL		"8.5.7"
 
 /*
  * A special definition used to allow this header file to be included from
