@@ -1,3 +1,15 @@
+2008-12-21  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tk.h:		Bump to 8.5.6 for release.
+	* library/tk.tcl:
+	* unix/configure.in:
+	* unix/tk.spec:
+	* win/configure.in:
+	* README:
+
+	* unix/configure:	autoconf-2.59
+	* win/configure:
+
 2008-04-10  Joe English  <jenglish@users.sourceforge.net
 
 	* library/palette.tcl(tk_setPalette): Don't set 
